feat: database transaction isolation level

--- a/docs/Ch02.Transaction Isolation Level.md
+++ b/docs/Ch02.Transaction Isolation Level.md
@@ -30,4 +30,26 @@
 말 그대로, 트랜잭션을 순차적으로 진행시키는 것을 말한다. 여러 트랜잭션이 동시에 같은 행에 접근할 수 없다. 고립 수준이 Level 3으로 가장 높은 명령어로, 실행 중인 트랜잭션은 다른 트랜잭션으로부터 완벽하게
 분리된다.
 
+## 격리 수준에 따른 문제점
 
+### Dirty Read
+
+### Non Repeatable Read
+
+### Phantom Read
+
+
+
+### Dirty Write
+
+### Lost Update
+
+### Read Skew
+
+### Write Skew
+
+## Reference
+
+- https://stackoverflow.com/questions/73917534/read-skew-vs-non-repeatable-read-transaction
+- https://stackoverflow.com/questions/27826714/lost-update-vs-write-skew
+- https://stackoverflow.com/questions/72850415/isolation-level-difference-between-dirty-write-and-lost-update
